force-app/main/default/objects/Medication_and_Allergies__c/Medication_and_Allergies__c.object-meta.xml
<CustomObject>
    <label>Medication and Allergies</label>
    <nameField>
        <label>Medication and Allergies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medication and Allergies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>