force-app/main/default/objects/Medication_and_Allergies__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>Medication and Allergies</relationshipLabel>
    <relationshipName>Medication_and_Allergies</relationshipName>
    <type>Lookup</type>
</CustomField>