force-app/main/default/objects/Medication_and_Allergies__c/fields/Medications_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Medications_Allergies__c</fullName>
    <label>Medications and Allergies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please bring a COMPLETE list of all prescription medications to your appointment.</fullName>
            </value>
            <value>
                <fullName>Please bring a COMPLETE list of all over-the-counter medications (supplements and vitamins).</fullName>
            </value>
            <value>
                <fullName>Include in the list the dosage for EACH medication.</fullName>
            </value>
            <value>
                <fullName>SUGGESTION. Bring our medications in a bag with you or take a photo with your smart phone of the medication.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>