force-app/main/default/objects/Medication_and_Allergies__c/fields/Message_Checkbox_1__c.field-meta.xml
<CustomField>
    <fullName>Message_Checkbox_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this box I choose not to receive prerecorded message and text from Couture Med Spa</description>
    <label>Message Checkbox 1</label>
    <type>Checkbox</type>
</CustomField>