force-app/main/default/objects/Medication_and_Allergies__c/fields/Patient_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Patient_Allergy__c</fullName>
    <label>Patient Allergy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>