force-app/main/default/objects/Medication_and_Allergies__c/fields/Patient_Current_Medication_Doseges_Notes__c.field-meta.xml
<CustomField>
    <fullName>Patient_Current_Medication_Doseges_Notes__c</fullName>
    <label>Patient Current Medication/Doseges Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>