force-app/main/default/objects/Medication_and_Allergies__c/fields/Patient_Notes__c.field-meta.xml
<CustomField>
    <fullName>Patient_Notes__c</fullName>
    <label>Patient Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>